codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 1303
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  3\"),\n&normalized_project_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  1 need input   1 working   0 ready
  ────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  3                                     │ Task details
  › ● Build the dashboard  current  Needs input       │
    ● Repair authentication  Working                  │ Build the dashboard
    ✓ Review yesterday's changes  Finished            │ ● Needs input
                                                      │
                                                      │ Agent: Inspect keyboard shortcuts
                                                      │ Open task to review.
                                                      │ Waiting for approval.
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │ Model: Unknown
                                                      │
                                                      │ Prompt
                                                      │ Build the dashboard
  New task
────────────────────────────────────────────────────────────────────────────────────────────────
› Describe a new task
────────────────────────────────────────────────────────────────────────────────────────────────
  ↑↓ navigate o resume enter open n new task w new worktree f search g group: project r rename
  x stop h hide a archive del delete ctrl+c quit
