codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_empty_narrow.snap
---
source: tui/src/app/agents_overview_tests.rs
assertion_line: 2485
expression: rendered
---
  Agent command center
  0 need input   0 working   0 ready
  ────────────────────────────────────────────













  New task  Directory: /tmp/project  (d to cha
────────────────────────────────────────────────
› Describe a new task
────────────────────────────────────────────────
  ↑↓ navigate o resume enter open n new task
  w new worktree f search g group: project
  r rename x stop h hide a archive del delete
  ctrl+c quit
