codex-rs/tui/src/snapshots/codex_tui__app__agents_overview__tests__agents_overview_last_message.snap
---
source: tui/src/app/agents_overview_tests.rs
expression: "render_bottom_popup(&app.chat_widget,\n96).replace(&format!(\"{project}  2\"),\n&normalized_group).replace(&project, \"/tmp/project\")"
---
  Agent command center
  1 need input   0 working   0 ready
  ────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project  2                                     │ Task details
    ● Repair authentication  Needs input              │
  › ✓ Investigate parser  Finished                    │ Investigate parser
                                                      │ ✓ Finished
                                                      │
                                                      │ Last message
                                                      │ Found the regression in the parser.
                                                      │ Found the regression in the parser.
                                                      │ Found the regression in the parser.
                                                      │ Found the regression in the parser.
                                                      │ …
                                                      │
                                                      │ Project
                                                      │ /tmp/project
                                                      │ Model: Unknown
  New task

› Describe a new task

  ↑↓ navigate o resume enter open n new task f search g group: project r rename x stop h hide
  a archive del delete ctrl+c quit
